Prevent overflow

--- a/resources/tempo.css
+++ b/resources/tempo.css
@@ -7,6 +7,7 @@ html, body {
 	font-family:Helvetica, arial, sans-serif;
 	-webkit-font-smoothing: antialiased;
 	height: 100%;
+	overflow-x: hidden;
 }
 
 a {
@@ -51,11 +52,10 @@ h1, h2, h3, h4, h5, h6 {
 #container {
 	min-height: 100vh;
 	height: 100%;
-	min-width:100vw;
-	max-width: 100vw;
+	width: 100%;
 	display:table;
 	position: relative;
-	overflow-x:hidden;
+	overflow:hidden;
 }
 
 #top {
@@ -81,8 +81,9 @@ h1, h2, h3, h4, h5, h6 {
 #top > #topnav > #userlinks {
 	min-height: 72px;
 	float: right;
-	width: 400px;
+	width: 55%;
 }
+
 #top > #topnav > #userlinks > ul {
 	line-height: 100%;
 	height: 100%;
@@ -91,15 +92,22 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #top > #topnav > #userlinks > ul > li {
+	float: right;
 	list-style-type: none;
 	display:inline-block;
 	font-size:small;
 	min-width: 70px;
 	min-height: 72px;
 	border-left: 1px solid #000;
+	border-right:1px solid #000;
 	vertical-align: middle;
 	position: relative;
 	z-index: 1;
+	transition: color .2s, background-color .2s, border .2s;
+}
+
+#top > #topnav > #userlinks > ul > li:last-child {
+	margin-right:210px;
 }
 
 #top > #topnav > #userlinks > ul > li:hover {
@@ -190,7 +198,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #sidebar section .top {
-	border-bottom:1px solid #839CA5;
+	border-bottom:1px solid #92a583;
 	width:100%;
 }
 
@@ -309,9 +317,6 @@ div.mw-createacct-benefits-container {
 	margin-top:25px;
 }
 
-#content article a .text {
-	font-weight: bold;
-}
 
 #content article p {
 	text-indent:5px;
@@ -483,4 +488,8 @@ div.mw-createacct-benefits-container {
 
 #main #content .mw-htmlform-submit:active {
 	background-color: #009712;;
+}
+
+a.text {
+	font-weight: bold !important;
 }
